--- a/index.html
+++ b/index.html
@@ -7,49 +7,54 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="https://fonts.gstatic.com/s/inter/v3/UCvCO3FwrcS8pX-cDB7KCQ.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Nina Carducci - Photographe professionnelle</title>
-    <meta name="description" content="Nina Carducci, photographe professionnelle en Île-de-France. Shooting photo, retouches et albums personnalisés.">
-	<style>
-		body {
-			max-width: 1920px;
-			margin: auto;
-			font-family: 'Inter', sans-serif;
-		}
-		
-		.top-header {
-			background-color: white;
-			position: sticky;
-			top: 0;
-			z-index: 1000;
-			display: flex;
-			justify-content: space-between;
-			padding-inline: 100px;
-			padding-block: 30px;
-			align-items: center;
-		}
-		
-		.top-header .name {
-			font-size: 26px;
-		}
-		
-		.nav ul {
-			display: flex;
-			list-style-type: none;
-			font-size: 14px;
-			margin-bottom: 0;
-		}
-		
-		.nav a {
-			text-decoration: none;
-			color: #000;
-		}
-		
-		.carousel-item {
-			height: 100%;
-			overflow: hidden;
-		}
-		</style>
+    <style>
+        body {
+            max-width: 1920px;
+            margin: auto;
+            font-family: 'Inter', sans-serif;
+        }
+
+        .top-header {
+            background-color: white;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            display: flex;
+            justify-content: space-between;
+            padding-inline: 100px;
+            padding-block: 30px;
+            align-items: center;
+        }
+
+        .top-header .name {
+            font-size: 26px;
+        }
+
+        .nav ul {
+            display: flex;
+            list-style-type: none;
+            font-size: 14px;
+            margin-bottom: 0;
+        }
+
+        .nav a {
+            text-decoration: none;
+            color: #000;
+        }
+
+        .carousel-item {
+            height: 100%;
+            overflow: hidden;
+        }
+
+        @font-face {
+            font-family: 'Inter';
+            src: url('https://fonts.gstatic.com/s/inter/v3/UCvCO3FwrcS8pX-cDB7KCQ.woff2') format('woff2');
+            font-display: swap;
+        }
+    </style>
 </head>
 <body>
     <div class="top-header">
@@ -93,103 +98,102 @@
         </div>
     </div>
 <div id="about">
-	<div class="picture left">
-		<img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci"> 
-	</div>
-	<div id="about-me">
-		<h3 class="about-me__title">A propos de moi</h3>
-		<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
-		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
-			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
-	</div>
+    <div class="picture left">
+        <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" loading="lazy" width="374" height="329"> 
+    </div>
+    <div id="about-me">
+        <h3 class="about-me__title">A propos de moi</h3>
+        <h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
+        <p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
+            C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+    </div>
 </div>
 <div id="gallery">
-	<h3 class="title">Portfolio</h3>
-	<div class="container py-3">
-		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" loading="lazy" alt="Concert énergique avec une foule enthousiaste">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" loading="lazy" alt="Portrait d'un homme d'affaires confiant en costume">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" loading="lazy" alt="Femme souriante lors d'une réunion d'entreprise">
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" loading="lazy" alt="Gros plan sur des mains se joignant, symbolisant l'union">
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" loading="lazy" alt="Portrait en gros plan d'un homme fermant les yeux">
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" loading="lazy" alt="Couple de mariés heureux marchant ensemble">
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash.webp" loading="lazy" alt="Portrait d'une jeune femme avec des lunettes">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" loading="lazy" alt="Chanteur passionné en performance sur scène">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" loading="lazy" alt="Femme souriante travaillant sur un ordinateur portable">
-		</div>
-	</div>
-	<div class="quote">
-		<figure>
-			<blockquote>
-				<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1>
-			</blockquote>
-			<figcaption class="quote__author">- Richard Avedon</figcaption>
-		</figure>
-	</div>
+    <h3 class="title">Portfolio</h3>
+    <div class="container py-3">
+        <div class="gallery" style="display: none">
+            <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" loading="lazy" alt="Concert énergique avec une foule enthousiaste">
+            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" loading="lazy" alt="Portrait d'un homme d'affaires confiant en costume">
+            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" loading="lazy" alt="Femme souriante lors d'une réunion d'entreprise">
+            <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" loading="lazy" alt="Gros plan sur des mains se joignant, symbolisant l'union">
+            <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" loading="lazy" alt="Portrait en gros plan d'un homme fermant les yeux">
+            <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" loading="lazy" alt="Couple de mariés heureux marchant ensemble">
+            <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash.webp" loading="lazy" alt="Portrait d'une jeune femme avec des lunettes">
+            <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" loading="lazy" alt="Chanteur passionné en performance sur scène">
+            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" loading="lazy" alt="Femme souriante travaillant sur un ordinateur portable">
+        </div>
+    </div>
+    <div class="quote">
+        <figure>
+            <blockquote>
+                <h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1>
+            </blockquote>
+            <figcaption class="quote__author">- Richard Avedon</figcaption>
+        </figure>
+    </div>
 </div>
 <div id="services">
-	<h3 class="title">Mes services</h3>
-	<div class="container">
-		<div class="service">
-			<div class="service__description">
-				<h3>Shooting photo</h3>
-				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
-			</div>
-			<div class="service__price">
-				<h4>350€/demi journée</h4>
-				<span>Matériel, déplacement inclus</span>
-			</div>
-
-		</div>
-		<div class="service">
-			<div class="service__description">
-				<h3>Retouches</h3>
-				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
-			</div>
-			<div class="service__price">
-				<h4>50€/photo</h4>
-				<span>2 AR par photo</span>
-			</div>
-		</div>
-		<div class="service">
-			<div class="service__description">
-				<h3>Album photos</h3>
-				<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
-			</div>
-			<div class="service__price">
-				<h4>400€ album A4</h4>
-				<span>30 pages recto/verso</span>
-			</div>
-		</div>
-	</div>
+    <h3 class="title">Mes services</h3>
+    <div class="container">
+        <div class="service">
+            <div class="service__description">
+                <h3>Shooting photo</h3>
+                <p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
+            </div>
+            <div class="service__price">
+                <h4>350€/demi journée</h4>
+                <span>Matériel, déplacement inclus</span>
+            </div>
+        </div>
+        <div class="service">
+            <div class="service__description">
+                <h3>Retouches</h3>
+                <p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
+            </div>
+            <div class="service__price">
+                <h4>50€/photo</h4>
+                <span>2 AR par photo</span>
+            </div>
+        </div>
+        <div class="service">
+            <div class="service__description">
+                <h3>Album photos</h3>
+                <p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
+            </div>
+            <div class="service__price">
+                <h4>400€ album A4</h4>
+                <span>30 pages recto/verso</span>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="quote">
-	<figure>
-		<blockquote>
-			<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
-		</blockquote>
-		<figcaption class="quote__author">- Richard Avedon</figcaption>
-	</figure>
+    <figure>
+        <blockquote>
+            <h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+        </blockquote>
+        <figcaption class="quote__author">- Richard Avedon</figcaption>
+    </figure>
 </div>
 <div id="contact">
-	<div class="container">
-		<div class="form-container">
-			<h3>Une question ? Une demande de devis ?</h3>
-			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-			<form action="" method="post">
-				<label for="nom">Nom</label>
-				<input type="text" name="nom" id="nom" required>
-				<label for="Email">Email</label>
-				<input type="email" name="email" id="email">
-				<label for="Message">Message</label>
-				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer"/>
-			</form>
-		</div>
-		<div class="picture right">
-			<img src="./assets/images/camera.webp" alt="Appareil photo vintage">
-		</div>
-	</div>
+    <div class="container">
+        <div class="form-container">
+            <h3>Une question ? Une demande de devis ?</h3>
+            <p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+            <form action="" method="post">
+                <label for="nom">Nom</label>
+                <input type="text" name="nom" id="nom" required>
+                <label for="Email">Email</label>
+                <input type="email" name="email" id="email">
+                <label for="Message">Message</label>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                <input type="submit" value="Envoyer"/>
+            </form>
+        </div>
+        <div class="picture right">
+            <img src="./assets/images/camera.webp" alt="Appareil photo vintage" loading="lazy" width="374" height="329">
+        </div>
+    </div>
 </div>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script defer src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
