--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v3/UCvCO3FwrcS8pX-cDB7KCQ.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <meta charset="UTF-8">
+    <title>Nina Carducci - Photographe professionnelle en Île-de-France</title>
+    <meta name="description" content="Nina Carducci, photographe professionnelle spécialisée en shooting photo, retouches et albums personnalisés. Basée en Île-de-France, je capture vos moments précieux avec passion et expertise.">
     <style>
         body {
             max-width: 1920px;
@@ -55,6 +57,29 @@
             font-display: swap;
         }
     </style>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Photograph",
+      "name": "Nina Carducci",
+      "url": "https://www.ninacarducci.com",
+      "logo": "https://www.ninacarducci.com/assets/images/logo.webp",
+      "image": "https://www.ninacarducci.com/assets/images/nina.webp",
+      "description": "Nina Carducci, photographe professionnelle en Île-de-France, spécialisée en shooting photo, retouches et albums personnalisés.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "123 Rue de la Photographie",
+        "addressLocality": "Paris",
+        "postalCode": "75000",
+        "addressCountry": "FR"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+33-1234-5678",
+        "contactType": "Customer Support"
+      }
+    }
+    </script>
 </head>
 <body>
     <div class="top-header">
@@ -78,7 +103,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme d'affaires marchant sur un passage piéton" loading="lazy" width="1920" height="879">
+                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme d'affaires traversant un passage piéton à Paris" loading="lazy" width="1920" height="879">
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule enthousiaste à un concert" loading="lazy" width="1920" height="879">
@@ -99,7 +124,7 @@
     </div>
 <div id="about">
     <div class="picture left">
-        <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" loading="lazy" width="374" height="329"> 
+        <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci, photographe professionnelle" loading="lazy" width="374" height="329"> 
     </div>
     <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
