--- a/index.html
+++ b/index.html
@@ -72,33 +72,42 @@
         </div>
     </div>
     <div id="header">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <style>
+            #carouselExampleIndicators {
+              height: 879px;
+            }
+            .carousel-item img {
+              width: 100%;
+              height: auto;
+            }
+          </style>
+          
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme d'affaires traversant un passage piéton à Paris" loading="lazy" width="1920" height="879">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule enthousiaste à un concert" loading="lazy" width="1920" height="879">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Couple de mariés s'embrassant" loading="lazy" width="1920" height="879">
-                </div>
+              <div class="carousel-item active">
+                <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme d'affaires marchant sur un passage piéton" loading="lazy" width="1920" height="879">
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule enthousiaste à un concert" loading="lazy" width="1920" height="879">
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Couple de mariés s'embrassant" loading="lazy" width="1920" height="879">
+              </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
             </button>
-        </div>
-    </div>
+          </div>
 <div id="about">
     <div class="picture left">
         <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci, photographe professionnelle" loading="lazy" height="554"> 
