--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preload" href="./assets/bootstrap/bootstrap.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
     <link rel="preload" href="./assets/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="stylesheet" href="./assets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v3/UCvCO3FwrcS8pX-cDB7KCQ.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Nina Carducci - Photographe professionnelle en Île-de-France</title>
@@ -55,7 +58,7 @@
     </div>
 <div id="about">
     <div class="picture left">
-        <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci, photographe professionnelle" loading="lazy" height="554"> 
+        <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci, photographe professionnelle" loading="lazy" width="374" height="554"> 
     </div>
     <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
